osd: fix wrong input when calling recover_object()

Iterating the obc' clones, recover_object() should check correspoding
adjacent clones.

fixes: https://tracker.ceph.com/issues/50806

Signed-off-by: Myoungwon Oh <myoungwon.oh@samsung.com>
(cherry-picked from c3163dd2e81eb7575385991387926631d989aca2)